fixer swagger pour categories
